--- a/PraktekInput/backup/unit1.lfm
+++ b/PraktekInput/backup/unit1.lfm
@@ -1,8 +1,111 @@
 object Form1: TForm1
-  Left = 339
-  Height = 240
-  Top = 157
-  Width = 320
+  Left = 345
+  Height = 428
+  Top = 143
+  Width = 625
   Caption = 'Form1'
+  ClientHeight = 428
+  ClientWidth = 625
   LCLVersion = '2.0.6.0'
+  object Edit1: TEdit
+    Left = 16
+    Height = 23
+    Top = 40
+    Width = 80
+    TabOrder = 0
+    Text = 'Edit1'
+  end
+  object btnSimpan: TButton
+    Left = 112
+    Height = 25
+    Top = 280
+    Width = 75
+    Caption = 'Simpan'
+    OnClick = btnSimpanClick
+    TabOrder = 1
+  end
+  object Memo1: TMemo
+    Left = 272
+    Height = 402
+    Top = 16
+    Width = 334
+    Lines.Strings = (
+      'Memo1'
+    )
+    TabOrder = 2
+  end
+  object btnReset: TButton
+    Left = 192
+    Height = 25
+    Top = 280
+    Width = 75
+    Caption = 'Reset'
+    OnClick = btnResetClick
+    TabOrder = 3
+  end
+  object rgJenisKelamin: TRadioGroup
+    Left = 16
+    Height = 49
+    Top = 72
+    Width = 185
+    AutoFill = True
+    Caption = 'Jenis Kelamin'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 2
+    ClientHeight = 29
+    ClientWidth = 181
+    Columns = 2
+    Items.Strings = (
+      'Laki-laki'
+      'Perempuan'
+    )
+    TabOrder = 4
+  end
+  object cbKota: TComboBox
+    Left = 16
+    Height = 23
+    Top = 136
+    Width = 100
+    ItemHeight = 15
+    Items.Strings = (
+      'Banjarbaru'
+      'Banjarmasin'
+      'Kandangan'
+      'Martapura'
+      'Rantau'
+      'Tanjung'
+    )
+    TabOrder = 5
+    Text = 'cbKota'
+  end
+  object cbxFoto: TCheckBox
+    Left = 16
+    Height = 19
+    Top = 176
+    Width = 72
+    Caption = 'Foto 3 X 4'
+    OnChange = cbxFotoChange
+    TabOrder = 6
+  end
+  object cbxKTP: TCheckBox
+    Left = 16
+    Height = 19
+    Top = 203
+    Width = 90
+    Caption = 'Fotokopi KTP'
+    TabOrder = 7
+  end
+  object cbxIjazah: TCheckBox
+    Left = 16
+    Height = 19
+    Top = 232
+    Width = 100
+    Caption = 'Fotokopi Ijazah'
+    TabOrder = 8
+  end
 end
